--- a/estilo.css
+++ b/estilo.css
@@ -30,8 +30,19 @@ body {
 	position: absolute;
 	width: 190px;
 	padding: 10px;
+	left: 0px;
 	bottom: 0px;
 	border-top: solid #fff;
 	background-color: #fff;
 	opacity: 0.7;
+}
+
+.vidas {
+	float: left;
+}
+
+.cronometro {
+	float: left;
+	font-size: 20px;
+	font-weight: bold;
 }
